--- a/tpl/index.html
+++ b/tpl/index.html
@@ -1,41 +1,47 @@
-<?xml version="1.0" encoding="UTF-8"?> <!DOCTYPE html
-PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <title>
-      <%title%>
-    </title>
-    <%styles%>
-    <%scripts%>
-    <%search%>
-    <%feeds%>
-    <%description%>
-    <%head%>
-  </head>
-  <body id="<%action%>">
-    <div id="wrap">
-      <%header%>
-      <div id="core">
-        <%localnav%>
-        <%bodytext%>
-        <div id="aside_primary" class="aside">
-          <%export%>
-          <%subscriptions%>
-          <%subscribers%>
-          <%groups%>
-          <%statistics%>
-          <%cloud%>
-          <%groupmembers%>
-          <%groupstatistics%>
-          <%groupcloud%>
-          <%popular%>
-          <%groupsbyposts%>
-          <%featuredusers%>
-          <%groupsbymembers%>
-        </div>
-      </div>
-      <%footer%>
-    </div>
-  </body>
-</html>
+	<head>
+		<title><%title%></title>
+		<%styles%>
+		<%scripts%>
+		<%search%>
+		<%feeds%>
+		<%description%>
+		<%head%>
+		</head>
+	<body id="<%action%>">
+		<p>This is a test. For the next sixty seconds this station will conduct a test of the emergency broadcast system.</p>
+		<div id="wrap">
+			<div id="header">
+				<%logo%>
+				<%nav%>
+				<%notice%>
+				<%noticeform%>
+			</div>
+			<div id="core">
+				<%localnav%>
+				<%bodytext%>
+				<div id="aside_primary" class="aside">
+					<%export%>
+					<%subscriptions%>
+					<%subscribers%>
+					<%groups%>
+					<%statistics%>
+					<%cloud%>
+					<%groupmembers%>
+					<%groupstatistics%>
+					<%groupcloud%>
+					<%popular%>
+					<%groupsbyposts%>
+					<%featuredusers%>
+					<%groupsbymembers%>
+					</div>
+				</div>
+			<div id="footer">
+				<%secondarynav%>
+				<%licenses%>
+			</div>
+			</div>
+		</body>
+	</html>
